--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ repositories {
 dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
-   implementation 'ch.qos.logback:logback-classic:1.4.14'
+   implementation 'commons-cli:commons-cli:1.6.0'
    implementation files('libs/csci448.gameLayout-1.3.0.jar')
+   implementation 'ch.qos.logback:logback-classic:1.4.14'
 }
 
 test {
